syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "proto/google/api/annotations.proto";
import "proto/protoc-gen-openapiv2/options/annotations.proto";
option go_package = "simple_bank/proto/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple bank API";
    version: "1.0";
    contact: {
      name: "khanhdt";
      url: "https://github.com/khanhdt2001/simple-bank";
      email: "none@example.com";
    };
  };
};

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp password_change_at = 5;
}

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp access_token_expires_at = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User){
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
  };
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){
    option (google.api.http) = {
      post: "/v1/login_user"
      body: "*"
    };
  };
}